anchor tags spacing fix
made the name anchors have a invisible height to counteract the fixed
header

--- a/css/sass/mainnav.scss
+++ b/css/sass/mainnav.scss
@@ -42,7 +42,10 @@ nav {
 }
 
 
-
+.quicklinks {
+	display: block;
+	height: 3.5em;
+}
 
 
 .togglea {
