--- a/css/sass/mainstructure.scss
+++ b/css/sass/mainstructure.scss
@@ -35,5 +35,7 @@ header {
 	width: 100%;
 	position: fixed;
 	top: 0px;
+	z-index: 5;
+
 	
 }
